--- a/scraper/views/index.html
+++ b/scraper/views/index.html
@@ -1,3 +1,7 @@
+---
+all: ['Linux', 'Windows', 'Chrome OS', 'Mac', 'Android']
+---
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -13,89 +17,189 @@
     }
 
     .cards {
-      margin: 0;
-      padding: 0;
-      list-style: none;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
-      grid-gap: 1em;
+      list-style: none;
+      margin: 0;
+      padding: 2rem;
+      /* grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); */
+      /* grid-gap: 1rem; */
     }
 
     .card {
-      border: 1px solid grey;
-      border-radius: 1em;
-      padding: 1em;
+      font-family: Roboto, sans-serif;
+      box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.2), 0px 0px 0px 0px rgba(0, 0, 0, 0.14), 0px 0px 0px 0px rgba(0, 0, 0, 0.12);
+      display: grid;
+      border: 1px solid #e8eaed;
+      border-radius: 4px;
+      padding: 1rem;
+      height: max-content;
+      overflow: hidden;
+      grid-gap: 0.5rem;
     }
 
-    /* .card--header {
+    .card:nth-of-type(even) {
+      background-color: rgb(243, 244, 246);
+      border-color: rgb(209, 213, 219);
+    }
+
+    .card:nth-of-type(even) .card--table thead,
+    .card:nth-of-type(even) .card--table tr:nth-of-type(even) {
+      background-color: white;
+    }
+
+    .card--tables {
       display: grid;
-      grid-template-columns: 1fr 5em;
-    } */
+      grid-gap: 1rem;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    }
+
+    .card--header {
+      display: grid;
+      grid-template-columns: 2.5fr 1fr 1fr 1rem;
+      align-items: flex-start;
+      grid-gap: 1rem;
+    }
 
     .card--title {
+      font-size: 1.25em;
+      line-height: 1.4;
+      font-weight: 500;
+      letter-spacing: 0.0125em;
       margin: 0;
+      padding: 0;
+      grid-column: 1 / span 1;
+      word-break: break-word;
     }
 
     .card--body {
-      display: grid;
-      grid-gap: 1rem;
+      line-height: 1.4;
+      font-weight: 300;
+      letter-spacing: 0.0178571429em;
+      display: none;
+    }
+
+    .card--body[data-open] {
+      display: block;
+    }
+
+    .card--details {
+      grid-column: 1 / span 3;
+    }
+
+    .card--more {
+      display: flex;
+      cursor: pointer;
+      color: #6200ee;
+      margin: 0;
+      font-weight: 500;
+      align-items: center;
+      justify-content: center;
+      border: 0;
+      background: none;
+      padding: 0;
+      align-self: center;
+      grid-column: -1 / span 1;
+    }
+
+    .card--more[data-open] .card--more-icon {
+      transform: rotate(45deg);
+    }
+
+    .card--more-icon {
+      height: 1rem;
+      width: 1rem;
+      fill: currentColor;
+    }
+
+    .card--summary {
+      opacity: 0.6;
+      margin: 0;
       margin-top: 1rem;
+      grid-column: 1 / span 1;
+    }
+
+    @media (min-width: 900px) {
+      .card--with-summary {
+        display: grid;
+        grid-template-columns: minmax(calc(100% - (600px + 2rem)), 60ch) minmax(calc(600px + 1rem), 1fr);
+        grid-gap: 1rem;
+      }
+    }
+
+    .card--available {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, 1.5em);
+      grid-gap: 0.5rem;
+      align-items: center;
+      /* margin-top: 0.75rem; */
+      grid-column: 3 / span 1;
+    }
+
+    .card--location {
+      width: 1.5em;
+      height: auto;
+    }
+
+    .card--location__big {
+      width: 2.5em;
+    }
+
+    /* .card--more::after {
+      content: '+';
+      display: inline-block;
+      margin-left: 0.25rem;
+    }
+
+    [open] > .card--more::after {
+      transform: rotate(45deg);
+    } */
+
+    .card--more::-webkit-details-marker {
+      display: none;
+    }
+
+    .card--table {
+      width: 100%;
+      max-width: 400px;
+      border: 1px solid #e8eaed;
+      margin-top: 1rem;
+      justify-self: center;
+    }
+    .card--table tr:nth-of-type(even),
+    .card--table thead {
+      background-color: #e8eaed;
+    }
+
+    .card--table td {
+      border: 0;
     }
 
     .pills {
       display: flex;
       flex-wrap: wrap;
-      align-items: center;
-      /* background: green; */
-      transform: translateX(-0.25rem);
-      width: calc(100% + 0.25rem);
-      /* float: right;
-      margin-left: 1rem;
-      width: 5rem; */
+      margin: -0.25rem -0.25rem;
+      /* margin-top: 0.75rem; */
+      grid-column: 2 / span 1;
     }
 
     .pill {
-      width: 5rem;
-      height: 2em;
-      padding: 0.5em;
-      font-size: 1rem;
-      border-radius: 2em;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-family: monospace;
-      margin: 0;
-      font-weight: normal;
-      margin: 0 0.25rem;
-    }
-    .pill abbr {
-      margin-left: 0.25rem;
+      margin: 0.25rem 0.25rem;
+      padding: 0 0.75em;
+      background-color: #e8eaed;
+      border-radius: 1em;
+      font-size: 0.875em;
     }
 
     .pill--shipped {
-      background-color: rgba(0, 255, 0, 0.25);
+      background-color: #aecbfa;
     }
-    .pill--ot {
-      background-color: rgba(0, 0, 255, 0.25);
-    }
+
     .pill--dev {
-      background-color: rgba(255, 255, 0, 0.25);
+      background-color: #fde293;
     }
 
-    table {
-      table-layout: fixed;
-      width: 100%;
-      overflow: hidden;
-    }
-
-    .more--where {
-      display: flex;
-      flex-wrap: wrap;
-    }
-
-    .logo {
-      width: 2em;
-      margin: 0 0.25em;
+    .pill--ot {
+      background-color: #a8dab5;
     }
   </style>
   <body>
@@ -103,8 +207,13 @@
 
     <header>
       <form action="" id="filter">
-        <input type="number" name="version" min="{{versions.min}}" max="{{versions.max}}" step="1" value="{{versions.min}}" />
+        <div>
+          <label for="version">Minimum Chrome version</label>
+          <input type="number" name="version" min="{{versions.min}}" max="{{versions.max}}" step="1" value="{{versions.min}}" id="version" />
+        </div>
+
         <input type="submit" />
+        <input type="reset" />
       </form>
     </header>
 
@@ -117,16 +226,37 @@
     </section>
     {% endif %} {% endfor %}
     <script type="module">
-      import Fuse from 'https://cdn.jsdelivr.net/npm/fuse.js@6.4.0/dist/fuse.esm.js';
+      import Fuse from 'https://cdn.jsdelivr.net/npm/fuse.js@6.4.3/dist/fuse.esm.js';
+
+      function toggleDetails(e) {
+        e.preventDefault();
+        const target = e.target.closest('.card--more');
+        const details = e.target.closest('.card').querySelector('.card--body');
+
+        if (target.dataset.open) {
+          delete target.dataset.open;
+          delete details.dataset.open;
+        } else {
+          target.dataset.open = true;
+          details.dataset.open = true;
+        }
+      }
 
       window.addEventListener('DOMContentLoaded', () => {
-        const cards = [...document.querySelectorAll('.card')].map((elem) => ({
-          elem,
-          title: elem.dataset.title,
-          shipping: JSON.parse(elem.dataset.shipping),
-          desc: elem.querySelector('.card--summary') ? elem.querySelector('.card--summary').textContent : '',
-          status: elem.dataset.type,
-        }));
+        const cards = [...document.querySelectorAll('.card')].map((elem) => {
+          const card = {
+            elem,
+            title: elem.dataset.title,
+            shipping: JSON.parse(elem.dataset.shipping),
+            desc: elem.querySelector('.card--summary') ? elem.querySelector('.card--summary').textContent : '',
+            status: elem.dataset.type,
+            bug: elem.dataset.bug,
+            where: JSON.parse(elem.dataset.where),
+          };
+          elem.querySelector('.card--more').addEventListener('click', toggleDetails);
+
+          return card;
+        });
 
         const fuse = new Fuse(cards, {
           keys: ['title', 'desc'],
@@ -137,23 +267,17 @@
           threshold: 0.7,
         });
 
-        console.log(fuse.search('service worker'));
+        const filter = document.getElementById('filter');
 
-        document.getElementById('filter').addEventListener('submit', (e) => {
+        filter.addEventListener('submit', (e) => {
           e.preventDefault();
           const data = new FormData(e.target);
           const version = parseInt(data.get('version'));
 
           for (const card of cards) {
             let display = false;
-            if (card.shipping) {
-              if (card.shipping.ship && card.shipping.ship <= version) {
-                display = true;
-              } else if (card.shipping.ot && card.shipping.ot.start <= version) {
-                display = true;
-              } else if (card.shipping.dev && card.shipping.dev <= version) {
-                display = true;
-              }
+            if (card.shipping?.ship >= version || card.shipping?.ot?.start >= version || card.shipping?.dev >= version || (card.status === 'shipped' && card.shipping === false)) {
+              display = true;
             }
 
             if (display) {
@@ -161,6 +285,12 @@
             } else {
               card.elem.style.display = 'none';
             }
+          }
+        });
+
+        filter.addEventListener('reset', (e) => {
+          for (const card of cards) {
+            card.elem.style.display = 'block';
           }
         });
       });
