Add PWA info to card

--- a/scraper/templates/includes/card.html
+++ b/scraper/templates/includes/card.html
@@ -1,8 +1,8 @@
 {% from './pill.html' import pills %} {% macro card(api, type) %}
-<li class="card" data-title="{{api.title}}" data-shipping="{{api.shipping | dump}}" data-type="{{type}}" data-bug="{{api.id}}" data-where="{{api.where | dump | lower}}">
+<li class="card" data-title="{{api.title}}" data-shipping="{{api.shipping | dump}}" data-type="{{type}}" data-bug="{{api.id}}" data-where="{{api.where | dump | lower}}" data-pwa="{{api.pwa}}">
   <div class="card--header">
     <h2 class="card--title">{{api.title}}</h2>
-    {% if api.shipping %} {{pills(api.shipping, type)}} {% endif %} {% if api.where %}
+    {% if api.shipping %} {{pills(api.shipping, type)}} {% endif %} {% if api.where or api.pwa %}
     <div class="card--available">
       {% for location in api.where %}
       <img class="card--location" src="/images/{{location | slug }}.svg" alt="{{location}}" />
