--- a/scraper/views/index.html
+++ b/scraper/views/index.html
@@ -1,7 +1,3 @@
----
-all: ['Linux', 'Windows', 'Chrome OS', 'Mac', 'Android']
----
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -16,13 +12,42 @@ all: ['Linux', 'Windows', 'Chrome OS', 'Mac', 'Android']
       box-sizing: border-box;
     }
 
+    body {
+      font-family: Roboto, sans-serif;
+      margin: 0;
+      position: relative;
+      padding: 0 3.5rem;
+    }
+
     .cards {
-      display: grid;
+      /* display: grid; */
       list-style: none;
       margin: 0;
-      padding: 2rem;
-      /* grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); */
-      /* grid-gap: 1rem; */
+      padding: 2rem 0;
+    }
+
+    section > h2 {
+      margin: 0;
+      padding: 0.5rem 0;
+      position: sticky;
+      top: 0;
+      left: 0;
+      background: white;
+      z-index: 10;
+    }
+
+    section {
+      padding: 1rem 0;
+    }
+
+    header p {
+      opacity: 0.6;
+      line-height: 1.4;
+      max-width: 80ch;
+    }
+
+    .hidden {
+      display: none !important;
     }
 
     .card {
@@ -37,38 +62,98 @@ all: ['Linux', 'Windows', 'Chrome OS', 'Mac', 'Android']
       grid-gap: 0.5rem;
     }
 
-    .card:nth-of-type(even) {
+    .card:not(.hidden):nth-of-type(even) {
       background-color: rgb(243, 244, 246);
       border-color: rgb(209, 213, 219);
     }
 
-    .card:nth-of-type(even) .card--table thead,
-    .card:nth-of-type(even) .card--table tr:nth-of-type(even) {
+    .card:not(.hidden):nth-of-type(even) .card--table thead,
+    .card:not(.hidden):nth-of-type(even) .card--table tr:nth-of-type(even) {
       background-color: white;
     }
 
     .card--tables {
       display: grid;
       grid-gap: 1rem;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    }
+
+    @media (min-width: 475px) {
+      .card--tables {
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      }
     }
 
     .card--header {
       display: grid;
-      grid-template-columns: 2.5fr 1fr 1fr 1rem;
+      grid-template-columns: 1fr 1fr 1rem;
       align-items: flex-start;
       grid-gap: 1rem;
+    }
+
+    @media (min-width: 745px) {
+      .card--header {
+        grid-template-columns: 2.5fr 1fr 1fr 1rem;
+      }
     }
 
     .card--title {
       font-size: 1.25em;
       line-height: 1.4;
-      font-weight: 500;
+      font-weight: 300;
       letter-spacing: 0.0125em;
       margin: 0;
       padding: 0;
-      grid-column: 1 / span 1;
+      grid-column: 1 / span 3;
       word-break: break-word;
+    }
+
+    .card--available {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, 1.5em);
+      grid-gap: 0.5rem;
+      align-items: center;
+      /* margin-top: 0.75rem; */
+      grid-column: 2 / span 1;
+    }
+
+    .pills {
+      display: flex;
+      flex-wrap: wrap;
+      margin: -0.25rem -0.25rem;
+      /* margin-top: 0.75rem; */
+      grid-column: 1 / span 1;
+    }
+
+    .card--more {
+      display: flex;
+      cursor: pointer;
+      color: #6200ee;
+      margin: 0;
+      font-weight: 500;
+      align-items: center;
+      justify-content: center;
+      border: 0;
+      background: none;
+      padding: 0;
+      align-self: center;
+      grid-column: 3 / span 1;
+    }
+
+    @media (min-width: 745px) {
+      .card--title {
+        grid-column: 1 / span 1;
+      }
+      .card--available {
+        grid-column: 3 / span 1;
+      }
+
+      .pills {
+        grid-column: 2 / span 1;
+      }
+
+      .card--more {
+        grid-column: -2 / span 1;
+      }
     }
 
     .card--body {
@@ -84,21 +169,6 @@ all: ['Linux', 'Windows', 'Chrome OS', 'Mac', 'Android']
 
     .card--details {
       grid-column: 1 / span 3;
-    }
-
-    .card--more {
-      display: flex;
-      cursor: pointer;
-      color: #6200ee;
-      margin: 0;
-      font-weight: 500;
-      align-items: center;
-      justify-content: center;
-      border: 0;
-      background: none;
-      padding: 0;
-      align-self: center;
-      grid-column: -1 / span 1;
     }
 
     .card--more[data-open] .card--more-icon {
@@ -121,18 +191,9 @@ all: ['Linux', 'Windows', 'Chrome OS', 'Mac', 'Android']
     @media (min-width: 900px) {
       .card--with-summary {
         display: grid;
-        grid-template-columns: minmax(calc(100% - (600px + 2rem)), 60ch) minmax(calc(600px + 1rem), 1fr);
+        grid-template-columns: min(calc(100% - (600px + 2rem)), 80ch) minmax(calc(600px + 1rem), 1fr);
         grid-gap: 1rem;
       }
-    }
-
-    .card--available {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, 1.5em);
-      grid-gap: 0.5rem;
-      align-items: center;
-      /* margin-top: 0.75rem; */
-      grid-column: 3 / span 1;
     }
 
     .card--location {
@@ -174,14 +235,6 @@ all: ['Linux', 'Windows', 'Chrome OS', 'Mac', 'Android']
       border: 0;
     }
 
-    .pills {
-      display: flex;
-      flex-wrap: wrap;
-      margin: -0.25rem -0.25rem;
-      /* margin-top: 0.75rem; */
-      grid-column: 2 / span 1;
-    }
-
     .pill {
       margin: 0.25rem 0.25rem;
       padding: 0 0.75em;
@@ -201,21 +254,265 @@ all: ['Linux', 'Windows', 'Chrome OS', 'Mac', 'Android']
     .pill--ot {
       background-color: #a8dab5;
     }
+
+    #filter-toggle {
+      background: rgb(250, 250, 250);
+      border: 0;
+      padding: 0;
+      height: 2.5rem;
+      width: 2.5rem;
+      padding: 0.5rem;
+      cursor: pointer;
+      align-self: flex-end;
+      transform: translateX(2.5rem);
+      border-radius: 0 0.5rem 0.5rem 0;
+      box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+      position: relative;
+    }
+
+    #filter-toggle::before {
+      content: '';
+      height: 100%;
+      width: 10px;
+      background-color: rgb(250, 250, 250);
+      position: absolute;
+      top: 0;
+      left: -5px;
+    }
+
+    #filter-toggle[data-active]::after {
+      content: '';
+      height: 0.5rem;
+      width: 0.5rem;
+      background-color: red;
+      position: absolute;
+      top: 0.5rem;
+      right: 0.5rem;
+      border-radius: 50%;
+    }
+
+    #filter-header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      background: rgb(250, 250, 250);
+      z-index: 20;
+      transform: translateX(-100%);
+      transition: transform 0.5s ease-in-out;
+      display: flex;
+      flex-direction: column;
+      border-radius: 0 0 0.5rem 0;
+      box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+    }
+
+    #filter-header[data-open] {
+      transform: translateX(0);
+    }
+
+    #filter {
+      margin-top: -2.5rem;
+      padding: 1rem;
+    }
+
+    #filter label {
+      display: block;
+      margin-bottom: 0.25rem;
+    }
+
+    #filter input:not([type='submit']):not([type='reset']),
+    #filter select {
+      width: 100%;
+    }
+    #filter div + div {
+      margin-top: 1rem;
+    }
+
+    .filter--controls {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 1rem;
+    }
+
+    [type='reset'] {
+      border: 0;
+      background: none;
+      display: inline-flex;
+      cursor: pointer;
+      color: #6200ee;
+      margin: 0;
+      font-weight: 500;
+      align-items: center;
+      justify-content: center;
+      border: 0;
+      background: none;
+      padding: 0;
+      align-self: center;
+      text-transform: uppercase;
+    }
+
+    [type='submit'] {
+      background-color: #6200ee;
+      color: #fff;
+      box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+      transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
+      padding: 0.625em 1em;
+      font-weight: 500;
+      align-items: center;
+      justify-content: center;
+      display: inline-flex;
+      vertical-align: middle;
+      border-radius: 4px;
+      text-transform: uppercase;
+      cursor: pointer;
+      border: 0;
+      -webkit-appearance: none;
+      appearance: none;
+    }
+
+    .info {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      grid-gap: 1rem;
+      padding: 1rem 0;
+    }
+
+    #info {
+      display: none;
+    }
   </style>
   <body>
     {% from 'card.html' import card %}
 
     <header>
+      <h1>Fugu API Tracker</h1>
+      <p>The <a href="https://developers.google.com/web/updates/capabilities">capabilities project</a> is a cross-company effort at Google to make it possible for web apps to do anything iOS/Android/desktop apps can, by exposing the capabilities of these platforms to the web platform, while maintaining user security, privacy, trust, and other core tenets of the web.</p>
+    </header>
+
+    <aside id="filter-header">
+      <button id="filter-toggle" aria-label="Open filter">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <path d="M0 0h24m0 24H0" fill="none" />
+          <path d="M7 6h10l-5.01 6.3L7 6zm-2.75-.39C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39A.998.998 0 0018.95 4H5.04c-.83 0-1.3.95-.79 1.61z" />
+          <path d="M0 0h24v24H0V0z" fill="none" />
+        </svg>
+      </button>
       <form action="" id="filter">
         <div>
+          <label for="search">Search</label>
+          <input type="text" id="search" name="search" />
+        </div>
+        <div>
+          <label for="platform">Platform</label>
+          <select name="platforms" id="platform" multiple size="{{platforms | length }}">
+            {% for platform in platforms %}
+            <option value="{{platform | lower}}">{{platform}}</option>
+            {% endfor %}
+          </select>
+        </div>
+        <div>
+          <label for="bug">Tracking bug</label>
+          <input type="number" id="bug" step="1" name="bug" />
+        </div>
+        <div>
           <label for="version">Minimum Chrome version</label>
-          <input type="number" name="version" min="{{versions.min}}" max="{{versions.max}}" step="1" value="{{versions.min}}" id="version" />
+          <input type="number" name="version" min="{{versions.min}}" max="{{versions.max}}" step="1" id="version" />
         </div>
 
-        <input type="submit" />
-        <input type="reset" />
+        <div class="filter--controls">
+          <input type="reset" />
+          <input type="submit" />
+        </div>
       </form>
-    </header>
+    </aside>
+
+    <details id="info">
+      <summary>Site information</summary>
+      <div class="info">
+        <table class="card--table">
+          <caption>
+            Icons
+          </caption>
+          <thead>
+            <tr>
+              <th>Icon</th>
+              <th>Meaning</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>🐡</td>
+              <td>Shipped, or expecting to ship, in Chrome</td>
+            </tr>
+            <tr>
+              <td>🔮</td>
+              <td>In origin trial</td>
+            </tr>
+            <tr>
+              <td>🏴</td>
+              <td>In developer trial</td>
+            </tr>
+            <tr>
+              <td>
+                <div class="card--more">
+                  <svg class="card--more-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <path d="M0 0h24v24H0V0z" fill="none"></path>
+                    <path d="M20 13h-7v7h-2v-7H4v-2h7V4h2v7h7v2z"></path>
+                  </svg>
+                </div>
+              </td>
+              <td>More info</td>
+            </tr>
+          </tbody>
+        </table>
+
+        <table class="card--table">
+          <caption>
+            Current
+            <a href="https://chromestatus.com/features/schedule">Chrome Releases</a>
+          </caption>
+          <thead>
+            <tr>
+              <th>Stability</th>
+              <th>Version</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Stable</td>
+              <td><a href="https://www.google.com/chrome/browser/desktop/index.html">Chrome {{versions.stable}}</a></td>
+            </tr>
+            <tr>
+              <td>Next up</td>
+              <td><a href="https://www.google.com/chrome/browser/desktop/beta.html">Chrome {{versions.beta}}</a></td>
+            </tr>
+            <tr>
+              <td>Dev</td>
+              <td><a href="https://www.google.com/chrome/browser/canary.html">Chrome {{versions.canary}}</a></td>
+            </tr>
+          </tbody>
+        </table>
+
+        <table class="card--table">
+          <caption>
+            Availability
+          </caption>
+          <thead>
+            <tr>
+              <th>Icon</th>
+              <th>Meaning</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for platform in platforms %}
+            <tr>
+              <td><img class="card--location" src="/images/{{platform | slug}}.svg" alt="{{platform | title }}" /></td>
+              <td>{{platform }}</td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+    </details>
 
     {% for type, items in apis %} {% if items.length %}
     <section>
@@ -243,6 +540,19 @@ all: ['Linux', 'Windows', 'Chrome OS', 'Mac', 'Android']
       }
 
       window.addEventListener('DOMContentLoaded', () => {
+        const filterButton = document.querySelector('#filter-toggle');
+
+        filterButton.addEventListener('click', (e) => {
+          const parent = e.target.closest('#filter-header');
+          if (parent.dataset.open) {
+            e.target.closest('#filter-toggle').setAttribute('aria-label', 'Open filter');
+            delete parent.dataset.open;
+          } else {
+            parent.dataset.open = true;
+            e.target.closest('#filter-toggle').setAttribute('aria-label', 'Close filter');
+          }
+        });
+
         const cards = [...document.querySelectorAll('.card')].map((elem) => {
           const card = {
             elem,
@@ -252,6 +562,7 @@ all: ['Linux', 'Windows', 'Chrome OS', 'Mac', 'Android']
             status: elem.dataset.type,
             bug: elem.dataset.bug,
             where: JSON.parse(elem.dataset.where),
+            pwa: elem.dataset.pwa === 'true',
           };
           elem.querySelector('.card--more').addEventListener('click', toggleDetails);
 
@@ -269,14 +580,89 @@ all: ['Linux', 'Windows', 'Chrome OS', 'Mac', 'Android']
 
         const filter = document.getElementById('filter');
 
-        filter.addEventListener('submit', (e) => {
-          e.preventDefault();
-          const data = new FormData(e.target);
-          const version = parseInt(data.get('version'));
+        init();
+
+        // Init from search results
+        function init() {
+          const search = new URL(window.location).search;
+
+          if (search) {
+            const params = new URLSearchParams(search.substring(1));
+            const toSearch = {
+              version: params.get('version'),
+              search: params.get('search'),
+              platforms: params.get('platforms') ? JSON.parse(params.get('platforms')) : '',
+              bug: params.get('bug'),
+            };
+
+            for (const elem of filter.querySelectorAll('[name]')) {
+              const param = toSearch[elem.name];
+              if (param) {
+                if (elem.type === 'select-multiple') {
+                  for (const item of param) {
+                    elem.querySelector(`[value="${item}"]`).selected = true;
+                  }
+                } else {
+                  elem.value = param;
+                }
+              }
+            }
+
+            filterResults(toSearch);
+          }
+        }
+
+        /**
+         * @param {object} options - Options to filter on
+         * @param {string} [options.version] - Minimum version to filter on
+         * @param {string} [options.search] - Search string to look for
+         * @param {string[]} [options.platforms] - Array of possible platforms it could have launched on
+         * @param {string} [options.bug] - Bug number
+         */
+        function filterResults({ version, search, platforms, bug } = options) {
+          const searchParams = new URLSearchParams();
+          searchParams.set('version', version);
+          searchParams.set('search', search);
+          searchParams.set('platforms', JSON.stringify(platforms));
+          searchParams.set('bug', bug);
+
+          window.history.pushState('', '', `?${searchParams.toString()}`);
+
+          document.querySelector('#filter-toggle').dataset.active = true;
+
+          const s = fuse.search(search).filter((s) => s.score <= 0.1);
+          const results = (s.length ? s.map((i) => i.item) : cards)
+            // Version
+            .filter((card) => {
+              if (isNaN(version)) return true;
+
+              if (card.status === 'shipped') {
+                if (card.shipping === false) return true;
+                if (card.shipping?.ship >= version) return true;
+              }
+              if (card.shipping?.ot?.start >= version) return true;
+              if (card.shipping?.dev >= version) return true;
+
+              return false;
+            })
+            // Platform
+            .filter((card) => {
+              if (platforms.length === 0) return true;
+
+              let filtered = [];
+              if (Array.isArray(card.where)) {
+                filtered = filtered.concat(card.where);
+              }
+              if (card.pwa) {
+                filtered.push('pwa');
+              }
+
+              return filtered.length >= 0 && filtered.filter((w) => platforms.includes(w.toLocaleLowerCase())).length > 0;
+            });
 
           for (const card of cards) {
             let display = false;
-            if (card.shipping?.ship >= version || card.shipping?.ot?.start >= version || card.shipping?.dev >= version || (card.status === 'shipped' && card.shipping === false)) {
+            if (results.find((c) => c.bug === card.bug)) {
               display = true;
             }
 
@@ -286,11 +672,29 @@ all: ['Linux', 'Windows', 'Chrome OS', 'Mac', 'Android']
               card.elem.style.display = 'none';
             }
           }
+        }
+
+        filter.addEventListener('submit', (e) => {
+          e.preventDefault();
+          const data = new FormData(e.target);
+
+          const version = parseInt(data.get('version'));
+          const search = data.get('search');
+          const platforms = data.getAll('platforms').map((p) => p.toLocaleLowerCase());
+          const bug = data.get('bug');
+
+          return filterResults({ version, search, platforms, bug });
         });
 
         filter.addEventListener('reset', (e) => {
           for (const card of cards) {
             card.elem.style.display = 'block';
+          }
+
+          delete document.querySelector('#filter-toggle').dataset.active;
+
+          if (location.search) {
+            history.pushState('', '', location.href.replace(location.search, ''));
           }
         });
       });
