--- a/templates/includes/card.html
+++ b/templates/includes/card.html
@@ -73,7 +73,30 @@
           </tr>
         </table>
       </div>
-      {% if api.summary %}
+      {% if api.docs | length or api.demos | length %}
+      <div class="card--resources">
+        {% if api.docs | length %}
+        <div>
+          <h3>Documentation</h3>
+          <ul class="card--docs">
+            {% for doc in api.docs %}
+
+            <li><a href="{{doc.url}}" class="">{{doc.origin}}</a></li>
+            {% endfor %}
+          </ul>
+        </div>
+        {% endif %} {% if api.demos | length %}
+        <div>
+          <h3>Demos</h3>
+          <ul class="card--docs">
+            {% for demo in api.demos %}
+            <li><a href="{{demo.url}}" class="">{{demo.origin}}</a></li>
+            {% endfor %}
+          </ul>
+        </div>
+        {% endif %}
+      </div>
+      {% endif %} {% if api.summary %}
     </div>
     {% endif %}
   </div>
