Make row titles clickable

--- a/templates/includes/card.html
+++ b/templates/includes/card.html
@@ -1,7 +1,14 @@
 {% from './pill.html' import pills %} {% macro card(api, type) %}
 <li class="card" data-title="{{api.title}}" data-shipping="{{api.shipping | dump}}" data-type="{{type}}" data-bug="{{api.id}}" data-where="{{api.where | dump | lower}}" data-pwa="{{api.pwa}}">
   <div class="card--header">
-    <h2 class="card--title">{{api.title}}</h2>
+    <button class="card--more card--title">
+      <h2 class="card--title">
+        {% if api.pwa %}
+        <img class="card--location" src="/images/pwa.svg" alt="PWA" title="PWA" />
+        {% endif %}<span>{{api.title}}</span>
+      </h2>
+    </button>
+
     {% if api.shipping %} {{pills(api.shipping, type)}} {% endif %} {% if api.where or api.pwa %}
     <div class="card--available">
       {% for location in api.where %}
