Clean up intro paragraph

--- a/views/index.html
+++ b/views/index.html
@@ -460,7 +460,7 @@
 
     <header class="site-header">
       <h1>Fugu API Tracker</h1>
-      <p>The <a href="https://developers.google.com/web/updates/capabilities">capabilities project</a> is a cross-company effort at Google to make it possible for web apps to do anything iOS/Android/desktop apps can, by exposing the capabilities of these platforms to the web platform, while maintaining user security, privacy, trust, and other core tenets of the web.</p>
+      <p>The <a href="https://developers.google.com/web/updates/capabilities">capabilities project</a>, also known as Project Fugu, is a cross-company effort to make it possible for web apps to do anything iOS, Android, or desktop apps can, by exposing the capabilities of these platforms to the web while maintaining user security, privacy, trust, and other core tenets of the web.</p>
       <details id="info">
         <summary>Icon Keys</summary>
         <div class="info">
