--- a/templates/includes/pill.html
+++ b/templates/includes/pill.html
@@ -1,11 +1,11 @@
 {% macro pills(shipping, type) %}
 <div class="pills">
   {% if shipping.dev and type != 'shipped' and type != 'ot' %}
-  <p class="pill pill--dev">🏴 <abbr title="Dev Trial in Chrome {{shipping.dev}}">M{{shipping.dev}}</abbr></p>
+  <p class="pill pill--dev"><abbr title="Dev Trial in Chrome {{shipping.dev}}">🏴 M{{shipping.dev}}</abbr></p>
   {% endif %} {% if shipping.ot and type != 'shipped' %}
-  <p class="pill pill--ot">🔮 <abbr title="Origin Trial in Chrome {{shipping.ot.start}}{{'-' + shipping.ot.end if shipping.ot.end}}">M{{shipping.ot.start}}{{'-' + shipping.ot.end if shipping.ot.end}}</abbr></p>
+  <p class="pill pill--ot"><abbr title="Origin Trial in Chrome {{shipping.ot.start}}{{'-' + shipping.ot.end if shipping.ot.end}}">🔮 M{{shipping.ot.start}}{{'-' + shipping.ot.end if shipping.ot.end}}</abbr></p>
   {% endif %} {% if shipping.ship %} {% set shipTitle = "Expected to ship" %} {% if type == 'shipped' %} {% set shipTitle = "Shipped" %} {% endif %}
-  <p class="pill pill--shipped">🐡 <abbr title="{{shipTitle}} in Chrome {{shipping.ship}}">M{{shipping.ship}}</abbr></p>
+  <p class="pill pill--shipped"><abbr title="{{shipTitle}} in Chrome {{shipping.ship}}">🐡 M{{shipping.ship}}</abbr></p>
   {% endif %}
 </div>
 {% endmacro %}
